--- a/explorer.html
+++ b/explorer.html
@@ -7,36 +7,39 @@
   <meta name="description" content="Paana - Base de connaissances sur la santé publique en Polynésie française">
   <link rel="stylesheet" href="header-footer.css" />
   <style>
-   
+    body {
+      font-family: 'Segoe UI', sans-serif;
+    }
   </style>
-
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css" />
-
 </head>
 <body>
 
   <header>
-  <div class="logo">
-  <span class="brand">Paana</span>
-  <div class="trait"></div>
-  </div>
-  <nav>
-    <a href="a-propos.html">A PROPOS</a>
-    <a href="explorer.html">EXPLORER</a>
-    <a href="https://forms.gle/PR8ZHvSXxLNYETtx9" target="_blank">SOUMETTRE</a>
-    <a href="mailto:frise.sante.pf@gmail.com" title="Contacter par mail">
-      <i class="fas fa-envelope fa-lg"></i>
-    <a href="index.html" title="Accueil">
-  <i class="fas fa-house"></i> 
-    </a>
-  </nav>
-</header>
+    <div class="logo">
+      <span class="brand">Paana</span>
+      <div class="trait"></div>
+    </div>
+    <nav>
+      <a href="a-propos.html">A PROPOS</a>
+      <a href="explorer.html">EXPLORER</a>
+      <a href="https://forms.gle/PR8ZHvSXxLNYETtx9" target="_blank">SOUMETTRE</a>
+      <a href="mailto:frise.sante.pf@gmail.com" title="Contacter par mail">
+        <i class="fas fa-envelope fa-lg"></i>
+      </a>
+      <a href="index.html" title="Accueil">
+        <i class="fas fa-house"></i> 
+      </a>
+    </nav>
+  </header>
 
   <main>
  
   </main>
- <footer class="footer">
+
+  <footer class="footer">
     <p>© 2025 Emmanuelle RUPP-TERRIS.<br>Tous droits réservés. Reproduction interdite sans autorisation.</p>
   </footer>
+
 </body>
 </html>
