--- a/a-propos.html
+++ b/a-propos.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>A propos - Paana</title>
   <meta name="description" content="Paana - Base de connaissances sur la santé publique en Polynésie française">
-  <link rel="stylesheet" href="/a-propos/a-propos.css." />
+  <link rel="stylesheet" href="a-propos/a-propos.css." />
   <style>
     body {
       font-family: 'Segoe UI', sans-serif;
