--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
       Base de connaissances dédiée à la santé publique en Polynésie française
     </p>
     <div class="buttons">
-      <a href="a-propos/a-propos.html" class="btn">A PROPOS</a>
+      <a href="a-propos.html" class="btn">A PROPOS</a>
       <a href="explorer.html" class="btn">EXPLORER</a>
       <a href="https://forms.gle/PR8ZHvSXxLNYETtx9" class="btn" target="_blank">SOUMETTRE</a>
           </div>
