--- a/index/index.html
+++ b/index/index.html
@@ -3,79 +3,22 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta name="description" content="Paana - Base de connaissances sur la santé publique en Polynésie française" />
+  <meta name="theme-color" content="#007b7f" />
+  <meta property="og:title" content="Paana - Santé publique en Polynésie" />
+  <meta property="og:description" content="Base de connaissances dédiée à la santé publique en Polynésie française." />
   <title>Paana</title>
-  <style>
-    body {
-   height: 100%;
-  margin: 0;
-  display: flex;
-  flex-direction: column;
-  background-color: #007b7f;
-  color: #f6f6e9;
-  font-family: 'League Spartan', sans-serif;
-    }
-    .container {
-     flex: 1;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-  text-align: center;
-  padding: 2rem;
-    }
-    .title {
-      font-size: 3rem;
-      font-weight: bold;
-      margin: 0;
-    }
-    .underline {
-      width: 200px;
-      height: 10px;
-      background-color: #fee58c;
-      margin: 1rem auto;
-    }
-    .subtitle {
-      font-size: 1.5rem;
-      margin-bottom: 4rem;
-      line-height: 1.2;
-    }
-    .buttons {
-      display: flex;
-      justify-content: center;
-      flex-wrap: wrap;
-      gap: 6rem;
-      margin-bottom: 6rem;
-    }
-    .btn {
-      background-color: #f6f6e9;
-      color: #000;
-      padding: 2.5rem 3rem;
-      border-radius: 20px;
-      text-decoration: none;
-      font-weight: 600;
-      letter-spacing: 1px;
-      transition: transform 0.2s ease, background-color 0.3s ease;
-    }
-    .btn:hover {
-      transform: scale(1.2);
-      background-color: #fee58c;
-      color: #000;
-    }
-    .footer{
-  text-align: center;
-  padding: 20px;
-  width: 100%;
-}
-    .footer p {
-  margin: 0;
-  line-height: 1.6;
-}
-    html {
-  height: 100%;
-}
-  
-  </style>
+
+  <!-- Police personnalisée -->
+  <link href="https://fonts.googleapis.com/css2?family=League+Spartan&display=swap" rel="stylesheet" />
+
+  <!-- Icônes Font Awesome -->
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css" />
+
+  <!-- CSS personnalisé -->
+  <link rel="stylesheet" href="styles/accueil.css" />
 </head>
+
 <body>
   <div class="container">
     <h1 class="title">Paana</h1>
@@ -87,13 +30,14 @@
       <a href="a-propos/a-propos.html" class="btn">A PROPOS</a>
       <a href="explorer.html" class="btn">EXPLORER</a>
       <a href="https://forms.gle/PR8ZHvSXxLNYETtx9" class="btn" target="_blank">SOUMETTRE</a>
-          </div>
+    </div>
   </div>
-  
-   <footer class="footer">
-      <p> © 2025 Emmanuelle RUPP-TERRIS.<br>
-        Tous droits réservés. Reproduction interdite sans autorisation.<br>
-        </p>
-    </footer>
+
+  <footer class="footer">
+    <p>
+      © 2025 Emmanuelle RUPP-TERRIS.<br>
+      Tous droits réservés. Reproduction interdite sans autorisation.
+    </p>
+  </footer>
 </body>
 </html>
